--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm so excited to learn coding!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Sacramento, California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Climbing and reading</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Remote Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Pacific Beach, California</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To expand my professional skill set</p>
     </section>
 
     <footer id="footer">
